# trail_management

./: README.md  pyproject.toml
trail_management/: hooks.py  modules.txt
trail_management/trial_management/doctype/technician/: technician.js  technician.json  technician.py  test_technician.py
trail_management/trial_management/doctype/trail_machines/: test_trail_machines.py  trail_machines.js  trail_machines.json  trail_machines.py
trail_management/trial_management/doctype/trail_machines_items/: trail_machines_items.json  trail_machines_items.py
